# qa-auto-engineer-python-project-49

./: .gitignore  Makefile  README.md  demo.cast  demo_1.cast  demo_2.cast  demo_3.cast  demo_4.cast  pyproject.toml
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
