[project]
name = "brain_games"
version = "0.1.0"
description = "Project uno"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
